# backend.ai-manager

./: .dockerignore  .editorconfig  .gitignore  .nvimlog  .travis.yml  CHANGELOG.md  CHANGELOG.rst  DEPENDENCIES.md  Dockerfile  Dockerfile-redis  HISTORY.md  HISTORY.rst  LOGGING.md  MIGRATION.md  PY38.md  README.md  README.rst  TESTING.md  alembic.ini.sample  cloudia.json  codecov.yml  compile_proto.sh  dev-requirements.txt  dev.etcd.volumes.json  idle.json  image-aliases.sample.yml  image-metadata.sample.yml  package-lock.json  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sftp.sh  volume.json
.github/workflows/: default.yml  lint-flake8.yml  timeline-check.yml  typecheck-mypy.yml
ai/backend/gateway/: __init__.py  admin.py  auth.py  config.py  defs.py  etcd.py  events.py  exceptions.py  kernel.py  logging.py  metric.py  ratelimit.py  server.py  stream.py  utils.py  vfolder.py
ai/backend/manager/: __init__.py  registry.py
ai/backend/manager/cli/: __init__.py  __main__.py  dbschema.py  etcd.py  fixture.py  shell.py
ai/backend/manager/models/: agent.py  base.py  fixtures.py  kernel.py  keypair.py  vfolder.py
alembic/: env.py  script.py.mako
alembic/versions/: 01456c812164_add_idle_timeout_to_keypair_resource_.py  02950808ca3d_add_agent_version.py  0e558d06e0e3_add_service_ports.py  0f3bc98edaa0_more_status.py  10e39a34eed5_enlarge_kernels_lang_column_length.py  185852ff9872_add_vfolder_permissions_table.py  1fa6a31ea8e3_add_inviter_field_for_vfolder_.py  22e52d03fc61_add_allowed_docker_registries_in_domains.py  26d0c387e764_create_vfolder_invitations_table.py  2b0931e4a059_convert_lang_to_image_and_registry.py  352fa4f88f61_add_tpu_slot_on_kernel_model.py  4545f5c948b3_add_io_scratch_size_stats.py  4b8a66fb8d82_revamp_keypairs.py  4cc87e7fbfdf_stats_refactor.py  57b523dec0e8_add_tpu_slots.py  5b45f28d2cac_add_extra_resources_in_kernels.py  5d8e6043455e_add_user_group_ids_in_vfolder.py  5de06da3c2b5_init.py  6f1c1b83870a_merge_user_s_first__last_name_into_full_.py  7a82e0c70122_add_group_model.py  7ea324d0535b_vfolder_and_kernel.py  80176413d8aa_keypairs_get_is_admin.py  819c2b3830a9_add_user_model.py  854bd902b1bc_change_kernel_identification.py  8e660aa31fe3_add_resource_presets.py  93e9d31d40bf_agent_add_region.py  a1fd4e7b7782_enumerate_vfolder_perms.py  babc74594aa6_add_partial_index_to_kernels.py  bae1a7326e8a_add_domain_model.py  be5a257f01b2_add_user_model.py  bf4bae8f942e_add_kernel_host.py  c092dabf3ee5_add_session_type.py  c3e74dcf1808_add_environ_to_kernels.py  c401d78cc7b9_add_allowed_vfolder_hosts_to_domain_and_.py  c5e4e764f9e3_add_domain_group_user_fields_to_kernels.py  d52bf5ec9ef3_convert_cpu_gpu_slots_to_float.py  d582942886ad_add_tag_to_kernels.py  dbc1e053b880_add_keypair_resource_policy.py  dbc1e053b880_add_user_resource_policy.py  e18ed5fcfedf_add_superadmin_role_for_user.py  (+8 more)
backend.ai/gateway/: __init__.py  auth.py  config.py  defs.py  events.py  exceptions.py  kernel.py  models.py  ratelimit.py  server.py
backend.ai/manager/: registry.py  server.py  structs.py
backend.ai/monitor/: run.py
changes/: 0.breaking  0.feature  0.misc  209.feature  210.feature  212.feature  213.feature  214.feature  216.breaking  217.faeture  217.feature  221.feature  224.feature  234.feature  235.feature  236.feature  241.feature  253.feature  258.feature  259.fix  262.misc  263.breaking  263.feature  263.misc  264.fix  265.feature  266.feature  267.feature  268.misc  269.feature  270.fix  271.misc  274.fix  275.fix  276.fix  277.misc  278.feature  279.fix  280.fix  281.fix  (+308 more)
config/: ci.toml  dev.shared.json  halfstack.alembic.template.ini  halfstack.toml  sample.etcd.config.json  sample.etcd.redis-sentinel.json  sample.etcd.volumes.json  sample.shared.json  sample.toml  sample.volume.json  template.toml
deps-local/: sorna_common-1.0.0a1-py36-none-any.whl
docs/: 382.fix  Makefile  conf.py  index.rst  make.bat
docs/manager/: driver.rst  instance.rst  structs.rst
fixtures/: example-keypairs.json  example-resource-presets.json  example-session-templates.json
protocols/: agent.proto  api.proto
requirements/: dev.txt  lint.txt  test.txt  typecheck.txt
sample-configs/: example-keypairs.json  example-resource-presets.json  image-aliases.yml  image-metadata.yml  volumes-local.yml  volumes.yml
scripts/: create-users-batch.py  create-users-from-csv.py  drop-user-related-columns.sql  migrate-vfolder-structure.py  query-test.py  run-with-halfstack.sh  set-psql-superuser.sql  switch-redis.sh
sorna/: api_server.py  driver.py  instance.py  kernel_agent.py  logging.py  manager.py  registry.py  structs.py  tests.py
sorna/gateway/: admin.py  auth.py  config.py  defs.py  etcd.py  events.py  exceptions.py  kernel.py  models.py  ratelimit.py  server.py  utils.py
sorna/gateway/tests/: conftest.py  test_auth.py  test_server.py
sorna/manager/: __init__.py  registry.py  server.py  structs.py  tests.py
sorna/manager/cli/: __init__.py  __main__.py  dbschema.py  fixture.py  shell.py
sorna/manager/models/: __init__.py  agent.py  base.py  billing.py  fixtures.py  kernel.py  keypair.py  vfolder.py
sorna/monitor/: run.py
sorna/proto/: agent_pb2.py  api_pb2.py
sorna/utils/: protobuf.py
src/ai/backend/gateway/: __init__.py  admin.py  agent.py  auth.py  config.py  (+29 more)
tests/: conftest.py  kernel_shell.py  model_factory.py  test_advisory_lock.py  test_auth.py  test_distributed.py  test_exceptions.py  test_image.py  test_middlewares.py  test_predicates.py  test_queryfilter.py  test_registry.py  test_scheduler.py  test_shell.py  tests.py
tests/api/: test_auth.py  test_config.py  test_events.py  test_exceptions.py  test_middlewares.py  test_ratelimit.py  test_utils.py
tests/gateway/: test_admin.py  test_auth.py  test_config.py  test_domain.py  test_etcd.py  test_events.py  test_group.py  test_kernel.py  test_keypair.py  test_manager.py  test_ratelimit.py  test_server.py  test_user.py  test_utils.py  test_vfolder.py
tests/manager/: test_distributed.py  test_queryfilter.py  test_registry.py  test_scheduler.py
(+151 files in other folders)
