[metadata]
name = backend.ai-manager
version = attr: src.ai.backend.manager.__version__
description = Backend.AI Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-manager
    Tracker = https://github.com/lablup/backend.ai-manager/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=41.0.1
install_requires =
    aioconsole>=0.1.3
    aiodataloader
    aiohttp~=3.5.0
    aiohttp_cors~=0.7
    aiojobs~=0.2.2
    aiopg~=0.16.0
    aioredis~=1.2.0
    aiotools>=0.8.1
    aiozmq>=0.7
    alembic~=1.0.0
    async_timeout~=3.0  # to avoid pip 10 resolver issue
    attrs>=18.0         # to avoid pip 10 resolver issue
    click>=7.0
    dataclasses; python_version<"3.7"
    graphene~=2.1.0
    passlib[bcrypt]>=1.7.1
    psycopg2-binary>=2.7.0
    python-dateutil>=2.8
    python-snappy~=0.5.1
    PyYAML
    pyzmq>=18.0.1
    SQLAlchemy~=1.1.14
    uvloop~=0.12.0
    setproctitle~=1.1.10
    trafaret>=1.2.0
    backend.ai-common>=19.09.0b4,<19.10.0
    PyJWT==1.7.1

[options.extras_require]
build =
    wheel>=0.33.4
    twine>=1.13.0
test =
    aiodocker>=0.14.0
    pytest>=5.0.0
    pytest-asyncio>=0.10.0
    pytest-aiohttp
    pytest-cov
    pytest-mock
    codecov
    flake8
dev =
    pytest-sugar
ci =
monitor =
    backend.ai-stats-monitor
    backend.ai-error-monitor

[options.entry_points]
console_scripts =
    backend.ai-manager = ai.backend.manager.cli.__main__:main

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions
