[metadata]
name = backend.ai-manager
version = attr: src.ai.backend.manager.__version__
description = Backend.AI Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-manager
    Tracker = https://github.com/lablup/backend.ai-manager/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
setup_requires =
    setuptools>=42.0.0
install_requires =
    aiodataloader
    aiofiles~=0.4.0
    aiohttp~=3.6.2
    aiohttp_cors~=0.7
    aiohttp_sse~=2.0
    aiojobs~=0.2.2
    aiopg~=1.0.0
    aioredis~=1.3.1
    aioredlock~=0.3.0
    aiotools>=0.8.5
    alembic~=1.3.2
    async_timeout~=3.0  # to avoid pip 10 resolver issue
    attrs>=19.3         # to avoid pip 10 resolver issue
    boltons~=19.3.0
    callosum~=0.9.1
    click>=7.0
    cryptography>=2.8
    dataclasses; python_version<"3.7"
    graphene~=2.1.0
    janus~=0.4.0
    Jinja2~=2.10.1
    passlib[bcrypt]>=1.7.1
    psycopg2-binary>=2.8.4
    python-dateutil>=2.8
    python-snappy~=0.5.1
    PyYAML~=5.2.0
    pyzmq==18.1.1
    SQLAlchemy~=1.3.12
    uvloop~=0.14.0
    setproctitle~=1.1.10
    tabulate~=0.8.6
    trafaret~=2.0.1
    backend.ai-common~=19.12.0a1
    backend.ai-cli~=0.2
    PyJWT==1.7.1
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.6
    twine>=1.14.0
test =
    aiodocker>=0.14.0
    pytest>=5.3.0
    pytest-asyncio>=0.10.0
    pytest-aiohttp
    pytest-cov
    pytest-mock
    codecov
dev =
    pytest-sugar
lint =
    flake8>=3.7.9
typecheck =
    mypy>=0.760
monitor =
    backend.ai-stats-monitor
    backend.ai-error-monitor

[options.entry_points]
backendai_scheduler_v10 =
    fifo = ai.backend.manager.scheduler.fifo:FIFOSlotScheduler
    lifo = ai.backend.manager.scheduler.fifo:LIFOSlotScheduler
    drf = ai.backend.manager.scheduler.drf:DRFScheduler
    mof = ai.backend.manager.scheduler.mof:MOFScheduler
backendai_cli_v10 =
    mgr = ai.backend.manager.cli.__main__:main
    mgr.start-server = ai.backend.gateway.server:main

[options.packages.find]
where = src
include = ai.backend.*

[options.package_data]
ai.backend.manager = py.typed
ai.backend.gateway = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
namespace_packages = true
