[metadata]
name = backend.ai-manager
version = attr: src.ai.backend.manager.__version__
description = Backend.AI Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-manager
    Tracker = https://github.com/lablup/backend.ai-manager/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
setup_requires =
    setuptools>=51.1.1
    wheel>=0.36.2
install_requires =
    aiodataloader
    aiodocker~=0.21.0
    aiofiles~=0.7.0
    aiohttp~=3.7.4
    aiohttp_cors~=0.7
    aiohttp_sse~=2.0
    aiojobs~=0.3.0
    aiomonitor~=0.4.5
    aioredis~=1.3.1
    aiotools~=1.2.2
    alembic~=1.6.5
    async_timeout~=3.0
    asyncache>=0.1.1
    asyncpg>=0.23.0
    attrs>=21.2
    boltons~=20.2.1
    callosum~=0.9.9
    click>=8.0.1
    cryptography>=2.8
    graphene~=2.1.9
    Jinja2~=3.0.1
    lark-parser~=0.11.3
    passlib[bcrypt]>=1.7.4
    psycopg2-binary>=2.8.4
    python-dateutil>=2.8
    python-snappy~=0.6.0
    PyJWT~=2.0
    PyYAML~=5.4.1
    pyzmq~=22.1.0
    SQLAlchemy[postgresql_asyncpg]~=1.4.23
    setproctitle~=1.2.2
    tabulate~=0.8.6
    trafaret~=2.1
    uvloop~=0.15.3
    zipstream-new~=1.1.8
    backend.ai-common==21.9.0a2
    backend.ai-cli~=0.5
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
    towncrier~=21.3.0
test =
    pytest~=6.2.1
    pytest-asyncio~=0.14.0
    pytest-aiohttp
    pytest-cov>=2.11
    pytest-mock>=3.5.0
    codecov
dev =
lint =
    flake8>=3.8.1
    flake8-commas>=2.1
typecheck =
    mypy>=0.910
    types-click
    types-Jinja2
    types-pkg_resources
    types-PyYAML
    types-python-dateutil
    types-tabulate
monitor =
    backend.ai-stats-monitor
    backend.ai-error-monitor

[options.entry_points]
backendai_scheduler_v10 =
    fifo = ai.backend.manager.scheduler.fifo:FIFOSlotScheduler
    lifo = ai.backend.manager.scheduler.fifo:LIFOSlotScheduler
    drf = ai.backend.manager.scheduler.drf:DRFScheduler
    mof = ai.backend.manager.scheduler.mof:MOFScheduler
backendai_cli_v10 =
    mgr = ai.backend.manager.cli.__main__:main
    mgr.start-server = ai.backend.manager.server:main
backendai_error_monitor_v20 =
    intrinsic = ai.backend.manager.plugin.error_monitor:ErrorMonitor

[options.packages.find]
where = src
include = ai.backend.*

[options.package_data]
ai.backend.manager = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions
filterwarnings =
    ignore::DeprecationWarning:etcd3.*:

[mypy]
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 105
blank_line_before_nested_class_or_def = true
